hard-gists/4034426/run.log
=== Docker Run Log for 4034426 ===
Started at: Mi 29. Okt 14:17:57 CET 2025

[2025-10-29 14:17:57] START: Running container for 4034426
[2025-10-29 14:17:58] SUCCESS: Container 3899b39e587d978984baa169857725b071d6483e5a4df25fd066d33da352512b started for 4034426
=== Container logs for 4034426 ===
  File "/snippet.py", line 35
    print 'Loading image from clipboard...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4034426 ===
[2025-10-29 14:18:00] INFO: Container 3899b39e587d978984baa169857725b071d6483e5a4df25fd066d33da352512b has stopped
